clean up bench code